# map_the_moon

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.win10.txt  CMakePresets.json  CPP_README.md  CPP_SUMMARY.md  Makefile  NAVIGATION_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md  compare.sh  demo.py  download_dem_data.py  main.py  requirements.txt  run_demo.sh  simple_viewer.py  test_loader.py  viewer.py
include/: application.hpp  camera.hpp  color_map_sampler.hpp  font_overlay.hpp  input.hpp  mesh.hpp  progess_bar.hpp  shader.hpp  sphere.hpp  terrain_dataset.hpp  terrain_loader.hpp  terrain_tile_cache.hpp  window.hpp
libs/TinyTIFF/: tiff_definitions_internal.h  tinytiff_ctools_internal.c  tinytiff_ctools_internal.h  tinytiff_defs.h  tinytiff_export.h  tinytiff_version.h.in  tinytiffreader.c  tinytiffreader.h
scripts/: README.md  download_colormap.sh  download_dem.py  download_lowres_color.sh  downsample_dem_pyramid.py  plot_scroll_speed.py  preprocess_dem.py
src/: color_map_sampler.cpp  lunar_sphere_viewer.cpp  lunar_viewer.cpp  sphere.cpp  view_sphere.cpp  view_tile.cpp
